# rubkontr2222

./: CMakeLists.txt  CPack.cmake  README.md
.github/workflows/: main.yml  main22.yml
tests/: tests.cpp
